[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cvprogressivemirrordetection"
version = "0.1.0"
description = "A computer vision project for Progressive Mirror Detection"
authors = [
    {name = "Chxresubles"}
]
requires-python = ">=3.7"
keywords = ["computer vision", "mirror", "segmentation", "kaggle"]
dependencies = [
    "hydra-core==1.3.2",
    "numpy==2.2.4",
    "opencv-python==4.11.0.86",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.67.1",
]

[tool.setuptools.packages.find]
include = ["cvprogressivemirrordetection*"]
exclude = ["data*", "output*", "scripts*"]
